--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "symfony/process": "^4.4|^5.3|^6.0"
     },
     "require-dev": {
         "pestphp/pest": "^1.20",
